# rand_distr

./: .typos.toml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md
.github/workflows/: benches.yml  distr_test.yml  test.yml
benches/: Cargo.toml
benches/benches/: distr.rs
distr_test/: Cargo.toml
distr_test/tests/: binary.rs  cdf.rs  skew_normal.rs  weighted.rs
distr_test/tests/ks/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parameter.rs
src/: beta.rs  binomial.rs  cauchy.rs  chi_squared.rs  dirichlet.rs  exponential.rs  fisher_f.rs  frechet.rs  gamma.rs  geometric.rs  gumbel.rs  hypergeometric.rs  inverse_gaussian.rs  lib.rs  normal.rs  normal_inverse_gaussian.rs  normal_truncated.rs  pareto.rs  poisson.rs  skew_normal.rs  student_t.rs  triangular.rs  unit_ball.rs  unit_circle.rs  unit_disc.rs  unit_sphere.rs  utils.rs  weibull.rs  zeta.rs  zipf.rs
src/multi/: dirichlet.rs  mod.rs
src/weighted/: weighted_alias.rs  weighted_tree.rs
tests/: value_stability.rs
