[package]
name = "benches"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

[dev-dependencies]
rand = { version = "0.10.0-rc.5", features = ["small_rng", "nightly"] }
rand_pcg = "0.10.0-rc.1"
rand_distr = { path = ".." }
criterion = "0.5"
criterion-cycles-per-byte = "0.6"

[[bench]]
name = "distr"
harness = false

[[bench]]
name = "weighted"
harness = false
