[package]
name = "distr_test"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
rand_distr = { path = "..", default-features = false, features = ["alloc"] }
rand = { version = "0.10.0", features = [] }
num-traits = "0.2.19"
# Special functions for testing distributions
special = "0.11.0"
spfunc = "=0.1.0"
# Cdf implementation
statrs = "0.17.1"
